<resources><string name="app_name">LoginPage</string><string name="action_settings">Settings</string><string name="login">Login</string><string name="username">Username</string><string name="password">Password</string><string name="leavemanagement">Leave Management</string><string name="forgotpassword">Forgot" "Password"?"</string><string name="forgotPass">Forgot Password</string><string name="forgotText">Enter your email and we"'"ll send you a link to</string><string name="forgotText2">reset your password.</string><string name="enterEmail">Enter Your Email</string><string name="Buttonsend">Send</string><string name="didnotreceived">Didn"'"t received a link"?"</string><string name="resend">Resend</string><string name="dashboard">Dashboard</string><string name="leaveRequests">Leave Requests</string><string name="leaveStatus">Leave Status</string><string name="rejectRequest">Reject Requests</string><string name="acceptedRequest">Accepted Requests</string><string name="listOfHolidays">List of Holidays</string><string name="interns">Interns</string><string name="leaveRequest">Leave Request</string><string name="moreLeaves">Intern who has asked more leaves</string><string name="lessLeaves">Intern who has asked less leaves</string><string name="request">Requests</string><string name="revokeRequest">Revoke Request</string><string name="revokeQuestion">Are you sure you want to revoke the request"?"</string><string name="yes">YES</string><string name="no">NO</string><string name="loginString">Login</string><string name="typeReason">Type Your Reason For Leave</string><string name="applyLeave">Apply Leave</string><string name="fullDay">Full Day</string><string name="firstHalf">1st Half Day</string><string name="secondHalf">2nd Half Day</string><string name="fromDate">From</string><string name="toDate">To</string><string name="leave">Leave</string><string name="workFromHome">WFH</string><string name="leaveSubmitStatus">Your leave request has been submitted successfully</string><string name="totalLeaveDays">Total leaves Days":" </string><string name="totaldays">2 Day"("s")"</string><string name="Profile">My Profile</string><string name="Name">Sara Sam Paul</string><string name="Business_Analyst">Business Analyst</string><string name="MobileNumber">+91 1234567890</string><string name="Internship_details">Internship details</string><string name="InternEmailAddress">sarapaul@1rivet.com</string><string name="InternUsername">sarapaul@12345</string><string name="Internlog_out">Log out</string><string name="fromDateDuration">18"/"01"/"2022</string><string name="toDateDuration">18"/"06"/"2022</string><string name="Training_Duration">Training Duration</string><string name="Domain">Domain</string><string name="domainName">PMO</string><string name="subdomain">Sub"-"Domain</string><string name="mentor">Mentors</string><string name="Change_Password">Change Password</string><string name="Enter_Your_Password">Enter Your Password</string><string name="Enter_New_Password">Enter New Password</string><string name="Confrirm_Your_Password">Confirm New Password</string><string name="Forget_Password">Forgot Password?</string><string name="status">Status</string><string name="profile">My Profile</string><string name="wfhRequests">WFH Requests</string><string name="pendingRequest">Pending Requests</string><string name="minValueText00">00</string><string name="totalLeaves">Total Leaves</string><string name="totalCountLeaves">20</string></resources>