<ScrollView android:layout_width="match_parent" android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"><androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size50" android:background="@color/backgroundWhite"><androidx.cardview.widget.CardView android:layout_width="@dimen/size120" android:layout_height="@dimen/size120" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" android:id="@+id/internCardView" app:cardCornerRadius="@dimen/size60" app:cardElevation="@dimen/size10" android:layout_marginTop="@dimen/size60"><androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content" /><de.hdodenhof.circleimageview.CircleImageView android:id="@+id/profileImageImageView" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/imageprofileinterns" /></androidx.cardview.widget.CardView><androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="@dimen/size600" app:cardCornerRadius="@dimen/size50" android:background="@drawable/shape_background_profile" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/internCardView" android:layout_marginTop="@dimen/size60" android:id="@+id/internView"><androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Name" android:id="@+id/internNameTextView" android:layout_marginTop="@dimen/size70" android:layout_marginLeft="@dimen/size20" android:textSize="@dimen/size20" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.229" /><TextView android:id="@+id/internBusinessTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Business_Analyst" android:layout_marginTop="@dimen/size35" android:textSize="@dimen/size15" app:layout_constraintEnd_toEndOf="@+id/internNameTextView" app:layout_constraintStart_toStartOf="@+id/internNameTextView" app:layout_constraintTop_toTopOf="@+id/internNameTextView" app:layout_constraintVertical_bias="0.098" /><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_call" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/internBusinessTextView" android:layout_marginTop="@dimen/size25" android:layout_marginRight="@dimen/size80" android:id="@+id/interncallImageView" /><TextView android:id="@+id/internNumTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/MobileNumber" android:textSize="@dimen/size10" android:layout_marginTop="@dimen/size30" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/interncallImageView" app:layout_constraintTop_toTopOf="@+id/internBusinessTextView" app:layout_constraintHorizontal_bias="0.100" android:layout_marginLeft="@dimen/size15" /><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_interndetails" android:background="@drawable/shape_background_profileicons" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/internNumTextView" android:layout_marginTop="@dimen/size50" android:layout_marginLeft="@dimen/size20" android:id="@+id/internDetailsImageView" /><TextView android:id="@+id/interDetailsNextTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Internship_details" android:textStyle="bold" android:layout_marginTop="@dimen/size10" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/internDetailsImageView" app:layout_constraintHorizontal_bias="0.100" android:layout_marginLeft="@dimen/size80" /><ImageView android:layout_width="@dimen/size30" android:layout_height="@dimen/size30" android:src="@drawable/ic_next" android:background="@drawable/shape_background_profileicons" app:layout_constraintTop_toTopOf="@+id/internDetailsImageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="@dimen/size20" android:layout_marginTop="@dimen/size05" android:id="@+id/interDetailsNextImageView" /><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_email_outline" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/interDetailsNextImageView" android:layout_marginTop="@dimen/size50" android:layout_marginLeft="@dimen/size20" android:id="@+id/internEmailImageView" /><TextView android:id="@+id/internEmailTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/InternEmailAddress" android:textStyle="bold" android:layout_marginTop="@dimen/size10" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/internEmailImageView" app:layout_constraintHorizontal_bias="0.100" android:layout_marginLeft="@dimen/size80" /><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_user" android:background="@drawable/shape_background_profileicons" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/internEmailImageView" android:layout_marginTop="@dimen/size60" android:layout_marginLeft="@dimen/size20" android:id="@+id/internUserImageView" /><TextView android:id="@+id/internUserTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/InternUsername" android:textStyle="bold" android:layout_marginTop="@dimen/size10" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/internUserImageView" app:layout_constraintHorizontal_bias="0.100" android:layout_marginLeft="@dimen/size80" /><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_change_password" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/internUserTextView" android:layout_marginTop="@dimen/size50" android:layout_marginLeft="@dimen/size20" android:id="@+id/internChangePassImageView" /><TextView android:id="@+id/internChangePassTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Change_Password" android:textStyle="bold" android:layout_marginTop="@dimen/size10" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/internChangePassImageView" app:layout_constraintHorizontal_bias="0.100" android:layout_marginLeft="@dimen/size80" /><ImageView android:layout_width="@dimen/size30" android:layout_height="@dimen/size30" android:src="@drawable/ic_next" app:layout_constraintTop_toTopOf="@+id/internChangePassImageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="@dimen/size20" android:layout_marginTop="@dimen/size05" android:id="@+id/internChangePassNextImageView" /><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_logout" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/internChangePassImageView" android:layout_marginTop="@dimen/size60" android:layout_marginLeft="@dimen/size20" android:id="@+id/internLogoutImageView" /><TextView android:id="@+id/internLogoutTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Internlog_out" android:textStyle="bold" android:layout_marginTop="@dimen/size10" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/internLogoutImageView" app:layout_constraintHorizontal_bias="0.100" android:layout_marginLeft="@dimen/size80" /></androidx.constraintlayout.widget.ConstraintLayout></androidx.cardview.widget.CardView></androidx.constraintlayout.widget.ConstraintLayout></ScrollView>